Add autolinker to mobile web

--- a/mobile/web/test.html
+++ b/mobile/web/test.html
@@ -10,7 +10,9 @@
 		<link rel="stylesheet" type="text/css" href="css/chat.css" />
 
 		<!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script> -->
-        <script type="text/javascript" src="js/socket.io.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/autolinker/3.11.1/Autolinker.min.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.0.7/purify.min.js"></script>
+		<script type="text/javascript" src="js/socket.io.js"></script>
 		<script type="text/javascript" src="js/shared.js"></script>
 		<script type="text/javascript" src="js/login.js"></script>
 		<script type="text/javascript" src="js/chatlist.js"></script>
