Expand input textbox on mobile

--- a/mobile/web/test.html
+++ b/mobile/web/test.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<title>MorChat</title>
 		<!-- <link href="https://fonts.googleapis.com/css?family=Exo+2:400,300,200" rel="stylesheet" type="text/css" /> -->
 		<link href="css/google-fonts.css" rel="stylesheet" type="text/css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
